TimeAdministrator/cluster/ingress/00-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: adtd
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - adtd.docugate.ch
      secretName: adtd-api-tls
  rules:
  - host: adtd.docugate.ch
    http:
      paths:
      - path: /v1/account/
        backend:
          serviceName: identity-svc
          servicePort: 6001
